fix(folder-icon): fix basic styles broken in some themes; svg and emoji icons are now aligned properly
add `data-icon-type` in addition to `data-icon`, svg icons are given `vertical-align: text-bottom` while emojis given `vertical-align: baseline`

close #61

--- a/src/modules/folder-icon.less
+++ b/src/modules/folder-icon.less
@@ -1,30 +1,25 @@
-body.alx-folder-icons
-  .nav-folder.alx-folder-with-note[data-icon]
-  > .nav-folder-title
-  > .nav-folder-title-content {
-  &::before {
+@folder-title-selector: .nav-folder-title > .nav-folder-title-content;
+
+.alx-folder-icons .nav-folder.alx-folder-with-note[data-icon] {
+  &[data-icon-type="emoji"] > @{folder-title-selector}::before {
     content: var(--alx-folder-icon-txt);
     background-image: var(--alx-folder-icon-url);
+    height: unset !important;
+    vertical-align: baseline;
   }
-
-  body:not(.cc-folder-icons) & {
-    &::before {
-      width: 14px;
-      height: 14px;
-      flex-shrink: 0;
-      flex-grow: 0;
-      margin-right: 5px;
-      position: relative;
-      display: inline-block;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
-    display: flex;
-    align-items: center;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    flex-grow: 1;
-    padding-left: 4px;
+  &[data-icon-type="svg"] > @{folder-title-selector}::before {
+    content: " ";
+    background-image: var(--alx-folder-icon-url);
+    vertical-align: text-bottom;
+  }
+  /** basic style setup */
+  & > @{folder-title-selector}::before {
+    width: 1em;
+    height: 1em;
+    margin-right: 3px;
+    display: inline-block;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
